# routes/routes.go
@@ -62,6 +62,4 @@ func SetupRoutes(r *gin.Engine, enforcer *casbin.Enforcer, db *sql.DB) {
 	roles.POST("/:role/users", middleware.AuthRequired(enforcer, db, perms.RolesManageUsers), handlers.AddUserToRole(db, enforcer))
 	roles.DELETE("/:role/users", middleware.AuthRequired(enforcer, db, perms.RolesManageUsers), handlers.RemoveUserFromRole(db, enforcer))
 
-	permissions := v1.Group("/permissions")
-	permissions.GET("", middleware.AuthRequired(enforcer, db, perms.PermissionsList), handlers.ListPermissions())
 }
